Trying to fix background image

--- a/css/style.css
+++ b/css/style.css
@@ -52,7 +52,7 @@ main {
 }
 
 .left-side {
-  background-image: url(/images/background.jpg);
+  background-image: url(images/background.jpg);
   background-position: center;
   background-size: cover;
   font-family: "Monoton", cursive;
